; ModuleID = '/home/carl/AnghaBench/linux/block/extr_blk-lib.c_blk_next_bio.c'
source_filename = "/home/carl/AnghaBench/linux/block/extr_blk-lib.c_blk_next_bio.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bio = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.bio* @blk_next_bio(%struct.bio* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.bio*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.bio*, align 8
  store %struct.bio* %0, %struct.bio** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load i32, i32* %6, align 4
  %9 = load i32, i32* %5, align 4
  %10 = call %struct.bio* @bio_alloc(i32 %8, i32 %9)
  store %struct.bio* %10, %struct.bio** %7, align 8
  %11 = load %struct.bio*, %struct.bio** %4, align 8
  %12 = icmp ne %struct.bio* %11, null
  br i1 %12, label %13, label %19

13:                                               ; preds = %3
  %14 = load %struct.bio*, %struct.bio** %4, align 8
  %15 = load %struct.bio*, %struct.bio** %7, align 8
  %16 = call i32 @bio_chain(%struct.bio* %14, %struct.bio* %15)
  %17 = load %struct.bio*, %struct.bio** %4, align 8
  %18 = call i32 @submit_bio(%struct.bio* %17)
  br label %19

19:                                               ; preds = %13, %3
  %20 = load %struct.bio*, %struct.bio** %7, align 8
  ret %struct.bio* %20
}

declare dso_local %struct.bio* @bio_alloc(i32, i32) #1

declare dso_local i32 @bio_chain(%struct.bio*, %struct.bio*) #1

declare dso_local i32 @submit_bio(%struct.bio*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
